# Momentum

./: README.md  agenda.py  pyproject.toml  tasks.json  tasks_bob.json  tasks_drake.json  tasks_test1.json
App/: Roadmap.md  app.py
App/Components/: header.py  nav.py  widgets.py
App/Engine/: builder.py  page.py  routes.py  settings.py  themes.py
App/Pages/: activities.py  focus.py  home.py  skills.py
App/User/: profile.py
mobile/: requirements.txt
mobile/flet-mobile-app/: README.md
mobile/flet-mobile-app/pages/: skills.py
mobile/flet-mobile-app/src/: README.md  app.py  main.py
mobile/flet-mobile-app/src/components/: header.py
mobile/flet-mobile-app/src/pages/: focus.py  home.py  skills.py
mobile/flet-mobile-app/src/settings/: themes.py
mobile/momentum/src/: README.md
mobile/momentum/src/pages/: activities.py
mobile/src/: app.py
mobile/src/components/: builder.py  header.py  nav.py  page.py
mobile/src/pages/: activities.py  focus.py  home.py  skills.py
mobile/src/settings/: config.py  themes.py
