[project]
name = "momentum-app"
version = "0.0.1"
description = ""
readme = "README.md"
requires-python = ">=3.13"
authors = [
    { name = "App Developer", email = "refreshedpc@outlook.com" }
]
dependencies = [
  "flet==0.28.1"
]

[tool.flet]
# org name in reverse domain name notation, e.g. "com.vemberweb".
# Combined with project.name to build bundle ID for iOS and Android apps
org = "com.vemberweb"

# project display name that is used as an app title on Android and iOS home screens,
# shown in window titles and about app dialogs on desktop.
product = "Momentum"

# company name to display in about app dialogs
company = "Vember Web Soluions"

# copyright text to display in about app dialogs
copyright = "Copyright (C) 2025 by VWS"

[tool.flet.app]
path = "src"

[tool.uv]
dev-dependencies = [
    "flet[all]==0.28.1",
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
flet = {extras = ["all"], version = "0.28.1"}